changed render logic

--- a/views/positions.hbs
+++ b/views/positions.hbs
@@ -13,7 +13,7 @@
           <h1>{{title}}</h1>
 
           <ul>
-              {{#each positions}}
+              {{#each data}}
               <li><a href={{positionUrl}}>{{this.position}}</a></li>
               {{else}}
               <li>There are no positions.</li>
