--- a/views/position_detail.hbs
+++ b/views/position_detail.hbs
@@ -13,7 +13,7 @@
           <h1>{{title}}</h1>
           
           <ul>
-              {{#each users}}
+              {{#each data}}
               <li><a href={{userUrl}}>{{this.name}}</a></li>
               {{else}}
               <li>There are no users.</li>
