--- a/views/users.hbs
+++ b/views/users.hbs
@@ -13,7 +13,7 @@
           <h1>{{title}}</h1>
 
           <ul class="users">
-              {{#each users}}
+              {{#each data}}
               <li><a href={{userUrl}}>{{this.name}}</a></li>
               {{else}}
               <li>There are no users.</li>
